--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,7 @@
 	<configuration>
           <jdkVersion>1.8</jdkVersion>
           <!-- Use your own application name -->
-          <appName>cs56-m18-lab03-phill</appName> 
+          <appName>cs56-m18-lab04-dylan-kupsh</appName> 
           <processTypes>
             <!-- Tell Heroku how to launch your application -->
             <!-- You might have to remove the ./ in front   -->
